# superset-extensions

./: .gitignore  LICENSE  README.md
api-explorer/: README.md  extension.json
api-explorer/frontend/: package.json  webpack.config.js
api_explorer/: README.md  extension.json
api_explorer/frontend/: package-lock.json  package.json  webpack.config.js
editor-snippets/: README.md  extension.json
editor-snippets/backend/: pyproject.toml  requirements.txt
editor-snippets/frontend/: package.json  webpack.config.js
editor_snippets/: README.md  extension.json
editor_snippets/backend/: pyproject.toml
editor_snippets/frontend/: package-lock.json  package.json
editors-bundle/: README.md  extension.json
editors_bundle/: README.md  extension.json
query-comparison/: README.md  extension.json
query-estimator/: README.md  extension.json
query-estimator/backend/: pyproject.toml
query-estimator/backend/src/michael_s_molina/query_estimator/: api.py  entrypoint.py
query-estimator/backend/src/superset_extensions/michael_s_molina/query_estimator/: api.py  types.py
query-insights/: README.md  extension.json
query-outline/: README.md  extension.json
query-statements/: README.md  extension.json
query_comparison/: README.md  extension.json
query_estimator/: README.md  extension.json
query_insights/: README.md  extension.json
result-stats/: README.md  extension.json
result_stats/: README.md  extension.json
sql_snippets/: README.md  extension.json
sqllab-gsheets/: README.md  extension.json
sqllab_gsheets/: README.md  extension.json
(+132 files in other folders)
